--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Routing in Angular2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
     <base href="/">
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
